--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,13 @@ jobs:
       - name: Build binary
         run: |
           mkdir -p dist
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o dist/sign-jwt .
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
+            go build -o dist/jwt . \
+            -ldflags "-X main.version=$(git describe --tags --always) -X 'main.buildTime=$(TZ=America/Chicago date)'"
 
       - name: Upload release asset
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/sign-jwt
+          files: dist/jwt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
