--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,9 @@ jobs:
     name: Build for Linux x86_64
     runs-on: ubuntu-latest
 
+    env:
+      TARGET: jwt-linux-amd64
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,16 +26,16 @@ jobs:
         run: |
           mkdir -p dist
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-            go build -o dist/jwt-linux-amd64 \
+            go build -o dist/$TARGET \
             -ldflags "-X main.version=$(git describe --tags --always) -X 'main.buildTime=$(TZ=America/Chicago date)'" \
             .
 
       - name: Show version output
-        run: ./dist/jwt version
-    
+        run: ./dist/$TARGET version
+
       - name: Upload release asset
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/jwt-linux-amd64
+          files: dist/${{ env.TARGET }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
